--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-index_calculator/_version.py
+mdf_reader/_version.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
