--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
     hooks:
     - id: trailing-whitespace
     - id: end-of-file-fixer
-    #- id: check-json
+    - id: check-json
     - id: check-toml
     - id: check-yaml
       args: ['--allow-multiple-documents']
