--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,11 +28,11 @@ repos:
     hooks:
       - id: toml-sort-fix
 
-  #- repo: https://github.com/adrienverge/yamllint.git
-  #  rev: v1.32.0
-  #  hooks:
-  #    - id: yamllint
-  #      args: ['--config-file=.yamllint.yaml']
+  - repo: https://github.com/adrienverge/yamllint.git
+    rev: v1.32.0
+    hooks:
+      - id: yamllint
+        args: ['--config-file=.yamllint.yaml']
 
   - repo: https://github.com/psf/black
     rev: 23.10.1
